--- a/richwysiwygeditor/src/main/assets/editor.html
+++ b/richwysiwygeditor/src/main/assets/editor.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<div id="editor" contenteditable="true"></div>
+<div id="editor" contenteditable="true">
+Hello, world!
+</div>
 <script type="text/javascript" src="rich_editor.js"></script>
 </body>
 </html>
